docs: hexo build docs

--- a/docs/themes/invincible/languages/en.yml
+++ b/docs/themes/invincible/languages/en.yml
@@ -6,5 +6,7 @@ menu:
 cat:
   overview: Overview
   invariant: invariant
-  isplainobject: isplainobject
+  isPlainObject: isPlainObject
+  parseDate: parseDate
+  formatDate: formatDate
   todo: todo
